out
    Checking sim v0.1.0 (/home/demiurge/Documents/Projects/sim)
error[E0596]: cannot borrow `sim` as mutable, as it is a captured variable in a `Fn` closure
  --> src/cosine.rs:38:17
   |
38 |                 sim[i][j] = s;
   |                 ^^^ cannot borrow as mutable

error[E0596]: cannot borrow `sim` as mutable, as it is a captured variable in a `Fn` closure
  --> src/cosine.rs:39:17
   |
39 |                 sim[j][i] = s;
   |                 ^^^ cannot borrow as mutable

warning: unused variable: `path1`
  --> src/main.rs:14:9
   |
14 |     let path1 = &args[1];
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_path1`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `path2`
  --> src/main.rs:15:9
   |
15 |     let path2 = &args[2];
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_path2`

For more information about this error, try `rustc --explain E0596`.
warning: `sim` (bin "sim") generated 2 warnings
error: could not compile `sim` (bin "sim") due to 2 previous errors; 2 warnings emitted
